Time: 3 ms (82.44%), Space: 43.3 MB (37.68%) - LeetHub